--- a/insurance.Rmd
+++ b/insurance.Rmd
@@ -1,4 +1,3 @@
-
 ---
 title: "Insurance Classification and Prediction"
 date: "1/11/22"
@@ -72,25 +71,19 @@ The data include the following variables:
 
 # Import libraries
 
-library(tidyverse)
-library(janitor)
-library(magrittr)
-library(flextable)
-library(dlookr) # eda
-#library(mice)
+library(tidyverse) # cleaning & wrangling functions
+library(janitor) # data cleaning
+library(magrittr) # piping
+library(flextable) #table layout and formatting
+library(dlookr) # exploratory data analysis functions
 library(patchwork) # easy plot layout
 library(ggpubr) # creates a wrapper for plotting a list
-#library(viridis)
+library(viridis) #box plots
 library(broom) # creates a tidy data frame from statistical test results
-
-
 library(InformationValue) # optimize threshold
-#library(MASS) #partial likelihood test for model fit comparisons
 library(caret) # conf matrix
 library(ROCR) #roc curve
-#library(corrplot)
-library(car)
-#library(logistf)
+library(car) # marginal plots
 ```
 
 ```{r}
@@ -104,7 +97,7 @@ raw <- read_csv(path)
 ```
 ##1. Data Processing##
 
-**1a. Clean and Reformat Data**
+**1.1 Clean and Reformat Data**
 
 This step includes:
 
@@ -156,7 +149,7 @@ str(df) # review structure of data set
 
 ```
 
-**1b. Tabulate Count and Frequency of Target Variable**
+**1.2 Tabulate Count and Frequency of Target Variable**
 
 Recall that the variable target_flag indicates whether or not an automobile was in an
 accident (0 = No, 1 = Yes).
@@ -188,7 +181,7 @@ df %>%
     set_caption("Count and Frequency of Target Levels")
 
 ```
-**1c. Summary Statistics for Numerical and Categorical Variables**
+**1.3 Summary Statistics for Numerical and Categorical Variables**
 
 There is one negative value (-3) for car_age that should be investigated.This may be 
 a data entry error.
@@ -234,6 +227,10 @@ target_1%>%
     diagnose_category()%>%
     flextable(theme_fun = theme_booktabs())
 
+
+
+
+
 ```
 Correct obvious data entry error in working dataframe
 
@@ -243,9 +240,10 @@ Correct obvious data entry error in working dataframe
 
 df$car_age[df$car_age < 0] <- NA
 
+
 ```
 
-**1d. Covariate Distributions**
+**1.4 Covariate Distributions**
 
 skewed data - target_flag, kidsdriv, homekids, yoj, income, oldclaim, clm_freq, 
 mvr_pts"
@@ -274,7 +272,7 @@ df%>%
     plot_normality()
 
 ```
-**1e. Data Outliers**
+**1.5 Data Outliers**
 
 percentage of outliers > 5%: kidsdriv, homekids, yoj 
 
@@ -300,7 +298,7 @@ diagnose_outlier(target_1) %>%
     set_caption("Outlier Summary: Target_Flag = 1")
 ```
 
-**1f. Missing Data**
+**1.6 Missing Data**
 
 Our dataset includes missing observations in one categorical variable (job) and six
 numerical variables (car_age, home-val, yoj, income, age). Across the variables the
@@ -310,7 +308,7 @@ address missingness, it may be helpful to assess collinearity among the covariat
 
 ```{r }
 
-#Basic missing table
+#Basic missing tables by target level
     
 target_0%>%
     diagnose()%>%
@@ -339,7 +337,7 @@ p2<-df%>%
 (p1|p2)
 
 ```
-**1g. Impute Missing Values**
+**1.7 Impute Missing Values**
 
 Numerical variables
 methods have been preselected based on initial plots.
@@ -404,6 +402,7 @@ df%<>%mutate_if(is.numeric, round)
 
 (p1|p2)/(p3|p4)/p5
 
+
 ```
 
 Categorical Variables - job
@@ -435,7 +434,7 @@ Save csv with imputed values
 
 ```
 
-**1h. Pairwise Comparisons**
+**1.8 Pairwise Comparisons**
 
 Pairwise comparisons provide a method to identify collinear relationships between
 covariates. Variables that display high collinearity (e.g., <> .50) may be redundant 
@@ -468,20 +467,20 @@ df%>%
 
 # Plot relationship between numerical covariates (w/o zero values for clarity) beyond the threshold coef_corr 
 
-p1<-df %>%
+df %>%
     filter(income != 0 & home_val != 0)%>% 
     target_by(income) %>%
     relate(home_val) %>%
     plot()
     
 
-p2<-df %>%
+df %>%
     filter(clm_freq != 0 & oldclaim != 0)%>%
     target_by(clm_freq) %>%
     relate(oldclaim) %>%
     plot()
 
-p3<-df %>%
+df %>%
     filter(home_val != 0 & car_age != 0)%>%
     target_by(home_val) %>%
     relate(car_age) %>%
@@ -489,16 +488,13 @@ p3<-df %>%
 
 # Plot relationship between numerical and factors for select variables
 
-p4<-df %>% 
+df %>% 
   target_by(income) %>%      
   relate(job) %>% 
   plot()
 
 df%>%kruskal.test(income~job) # assess covariance with Kruskal-Wallis rank sum test where > 1 categorical level
 
-# Print plots
-
-(p1|p2)/(p3|p4)
 
 ```
 
@@ -512,18 +508,20 @@ Findings:
 
 ```{r }
 
-# Subset categorical variables
+# Subset categorical variables into a df of factor vars
 
-df_factor<-df%>%
+mosaic<-df%>% #subset target_flag as factor
+    mutate_at(vars(target_flag), funs(as.factor))%>%
     dplyr::select(where(is.factor))
 
-target <- all_of(names(df_factor)[1]) # set name for target_flag
-covariates <- all_of(names(df_factor)[2:11]) # set names for factor covariates
+target <- all_of(names(mosaic)[1]) # set name for target_flag
+predictors <- all_of(names(mosaic)[2:11])
 
-#Create mosaic plots
+#generate mosaic plots with purrr and dlookr
+
+(plots<-predictors%>%map(function(predictors) mosaic%>%target_by(target)%>%relate(predictors)%>%plot()))
 
 
-(plots<-covariates%>%map(function(covariates) df%>%target_by(target)%>%relate(covariates)%>%plot()))
 
 ```
 Numeric variables and target
@@ -533,15 +531,12 @@ Numeric variables and target
 # Subset numerical variables
 
 num_box<-select_if(df, is.numeric)%>%
+    mutate_at(vars(target_flag), funs(as.factor))%>%
     dplyr::select(-target_amt)
-
-num_box<-cbind(df$target_flag, num_box)%>%
-    rename(target_flag = 'df$target_flag')
-
 
 # Plot using boxplots
 
-response = names(num_box)[1] #target_flag
+response = names(num_box)[1] #target_flag (needs to be fct for these plots)
 response = purrr::set_names(response)
 
 explain <- names(num_box)[2:14] #explanatory variables
@@ -556,13 +551,13 @@ box_fun = function(x) {
     theme_classic()
 }
 
-b_plots<-map(explain, ~box_fun(.x)) #creates a list of plots using purrr
+box_plots<-map(explain, ~box_fun(.x)) #creates a list of plots using purrr
 
-ggarrange(plotlist=b_plots, height = .5, ncol = 3) # layout plots
+ggarrange(plotlist=box_plots, height = .5, ncol = 3) # layout plots
 
 
 ```
-**1i. Final Variable Selections**
+**1.9 Final Variable Selections**
 
 ```{r}
 
@@ -625,7 +620,9 @@ test_df%>%count(target_flag)%>%
 
 ##3. Build Models##
 
-**3a. Null Model: Logistic Regression**
+Some description here
+
+**3.1 Null Model: Logistic Regression**
 
 ```{r}
 
@@ -637,7 +634,7 @@ null_stats<-glance(null) # collect stats for model comparisons
 
 ```
 
-**3b. Full Model: Logistic Regression**
+**3.2 Full Model: Logistic Regression**
 
 ```{r}
 
@@ -645,10 +642,11 @@ full<-glm(target_flag ~ ., family = binomial, train_df)
 
 summary(full)
 
+
 full_stats<-glance(full) # collect stat metrics for model comparisons
 
 ```
-**3c. Reduced Model: Logistic Regression **
+**3.3 Reduced Model: Logistic Regression **
 
 ```{r}
 
@@ -663,7 +661,7 @@ summary(reduced)
 reduced_stats<-glance(reduced) # collect stats for model comparisons
 
 ```
-**3c.1. Diagnostics: Reduced Model**
+**3.3.1 Diagnostics: Reduced Model**
 
 The ROC curve shows the tradeoff between true positive rate and false positive rate across all cutoff values.
 
@@ -673,7 +671,7 @@ Note: InformationValue:confusionMatrix -- wants predicts and obs to be numerical
 
 # Collect predicted percentages
 
-predicted<-predict(reduced,reduced_df,type='response')
+predicted<-predict(reduced,train_df,type='response')
 
 # Find optimal threshold to minimize misclassification
 
@@ -699,18 +697,18 @@ AUC<-AUROC(actuals, predicted) # -->.81
 
 Sensitivity<-InformationValue::sensitivity(actuals, predicts, threshold = optimal) # recall: true positive rate
 Specificity<-InformationValue::specificity(actuals, predicts, threshold = optimal) #false positive rate
-Preciaion<-InformationValue::precision(actuals, predicts, threshold = optimal) # prop of predicted ones /prop total ones
+Precision<-InformationValue::precision(actuals, predicts, threshold = optimal) # prop of predicted ones /prop total ones
 
 YDI_Index<- youdensIndex(actuals, predicts, threshold = optimal) # 0.48 accounts for both false-positive and false-negative rates
 
 # Assess predictive power using concordance
 
 Predict_Power<-Concordance(actuals, predicts) # predictive power  ---> .548
-Predict_Power<-Concord$Concordance
+Predict_Power<-Predict_Power$Concordance
 
-p1<-ks_plot(actuals, predicts) #cum perc of ones captured by the model against that expected random
+ks_plot(actuals, predicts) #cum perc of ones captured by the model against that expected random
 
-ks_stat(actuals, predicts) #Kolmogorov-Smirnov statistic - maximum difference between the cumulative true positive and cumulative false positive rate
+Kol_Smirnov<-ks_stat(actuals, predicts) #Kolmogorov-Smirnov statistic - maximum difference between the cumulative true positive and cumulative false positive rate
 
 # Create a metrics table
 
@@ -721,17 +719,16 @@ reduced_metrics<-cbind(Predict_Power, Miss_Class_Error, AUC, Sensitivity, Specif
 pred <- ROCR::prediction(predicted, actuals)
 perf <- ROCR::performance(pred, "tpr", "fpr")
 
-p2<-plot(perf, colorize = TRUE, main = "ROC curve for logistic regression on insurance data")
+plot(perf, colorize = TRUE, main = "ROC curve for logistic regression on insurance data")
 
 #AUC curve
 
-p3<-plotROC(actual, predicted)
+plotROC(actuals, predicted)
 
-(p1|p2|p3)
 
 ```
 
-**3c.2. Reduced Model: Overdispersion**
+**3.3.2 Reduced Model: Overdispersion**
 
 - we are within tolerable levels of dispersion
 
@@ -748,7 +745,7 @@ quasi_model <-  glm(target_flag ~ .,family='quasibinomial', base_df) # note: usi
 pchisq(summary(quasi_model)$dispersion * reduced$df.residual,
  reduced$df.residual, lower = F)  
 ```
-**3c.3. Reduced: Check linearity of numerical vars vs. logit***
+**3.3.3 Reduced Model: Check linearity of numerical vars vs. logit***
 
 Linearity is questionable for yoj, oldclaim
 
@@ -765,27 +762,24 @@ reduced_df$predicted<-predict(reduced,train_df,type='response') # add predicted
 reduced_df%<>%mutate(logit = log(predicted/(1-predicted))) # add logit
 
 
+par(mfrow = c(2,4)) 
+
 # check linearity btwn numerical predictors and logit
 
-p1<-with(reduced_df, scatter.smooth(travtime, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-p2<-with(reduced_df, scatter.smooth(tif, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-p3<-with(reduced_df, scatter.smooth(mvr_pts, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-p4<-with(reduced_df, scatter.smooth(income, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-p5<-with(reduced_df, scatter.smooth(homekids, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-p6<-with(reduced_df, scatter.smooth(oldclaim, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-p7<-with(reduced_df, scatter.smooth(clm_freq, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-p8<-with(reduced_df, scatter.smooth(bluebook, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(travtime, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(tif, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(mvr_pts, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(income, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(homekids, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(oldclaim, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(clm_freq, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(bluebook, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
 
-#Print Plots
-
-(p1|p2|p3) /
-(p4|p5|p6) /
-(p7|p8)
 
 
 ```
 
-**3c.4. Reduced Model: Outliers and Infuential obs**
+**3.3.4 Reduced Model: Outliers and Infuential obs**
 
 computes the standardized residuals (.std.resid) and the Cook’s distance (.cooksd) using the R function augment() [broom package]
 
@@ -802,31 +796,29 @@ There are no obs has std residual beyond 3 stdev: 5101
 
 # Extract model results
 
-reduced$data <- augment(reduced) %>% 
+reduced_df$data <- augment(reduced) %>% #add model output to dataframe
   mutate(index = 1:n()) 
 
 # Identify Outliers
 
-reduced$data %>% top_n(10, .cooksd)
+reduced_df$data %>% top_n(10, .cooksd)
 
-p1<-plot(reduced, which = 4, id.n = 3)  # keep an eye on obs > 4/n 
+plot(reduced, which = 4, id.n = 3)  # keep an eye on obs > 4/n 
 
 #Plot Standardized Residuals
 
-p2<-ggplot(reduced$data, aes(index, .std.resid)) + 
+ggplot(reduced_df$data, aes(index, .std.resid)) + 
   geom_point(aes(color = target_flag), alpha = .5) +
   theme_bw()
 
 #Filter potential influential data points with abs(.std.res) > 3
 
-reduced$data %>% 
+reduced_df$data %>% 
   filter(abs(.std.resid) > 3)
 
-#Print plots
 
-(p1|p2)
 ```
-**3c.5. Reduced Model: Collinearity**
+**3c.3.5. Reduced Model: Collinearity**
 
 Findings: no problems with collinearity
 
@@ -835,7 +827,7 @@ Findings: no problems with collinearity
 car::vif(reduced)
 ```
 
-**3c.6. Reduced Model: Independence of Residuals**
+**3.3.6. Reduced Model: Independence of Residuals**
 
 We see some possible pattern (curvature) that might indicate misclassification but its unclear 
 
@@ -851,8 +843,15 @@ plot(residuals~linpred, diag, xlab = "linear predictor")
 
 
 ```
-**3d. Transfomed Model**
 
+**3.3.7 Reduced Model: Goodness of Fit - Marginal Plots**
+
+```{r}
+marginals_reduced<-mmps(reduced,main=NULL)
+```
+
+
+**3.4 Transfomed Model**
 
 ```{r fig.align='center', fig.height=10,fig.width=10, message = FALSE}
 
@@ -871,13 +870,13 @@ trans_stats<-glance(trans) # save stats for model comparisons
 
 
 ```
-**3d.1 Transformed Model: Diagnostics **
+**3.4.1 Transformed Model: Diagnostics **
 
 ```{r}
 
 # collect predicted percentages
 
-trans_predicted<-predict(trans,train_df,type='response')
+trans_predicted<-predict(trans, train_df,type='response')
 
 # find optimal threshold to minimize misclassification
 
@@ -893,26 +892,26 @@ trans_predicts<-ifelse(trans_predicted >= trans_optimal, 1, 0)
 
 # subset actuals and predicts as numeric for confusion matrix
 
-trans_actuals<-as.numeric(as.character(optimum_df$target_flag))
+trans_actuals<-as.numeric(as.character(train_df$target_flag))
 
-(InformationValue::confusionMatrix(actuals, predicts, threshold = optimal))
+(InformationValue::confusionMatrix(trans_actuals, trans_predicts, threshold = optimal))
 
 #Calculate related metrics
 
 AUC<-AUROC(trans_actuals, trans_predicted) # -->.81
-Sensitivity<-InformationValue::sensitivity(actuals, predicts, threshold = optimal) # recall: true positive rate
-Specificity<-InformationValue::specificity(actuals, predicts, threshold = optimal) #false positive rate
-Precision<-InformationValue::precision(actuals, predicts, threshold = optimal) # prop of predicted ones /prop total ones
-YDI_Index<-youdensIndex(actuals, predicts, threshold = optimal) # 0.48 accounts for both false-positive and false-negative rates
+Sensitivity<-InformationValue::sensitivity(trans_actuals, trans_predicts, threshold = optimal) # recall: true positive rate
+Specificity<-InformationValue::specificity(trans_actuals, trans_predicts, threshold = optimal) #false positive rate
+Precision<-InformationValue::precision(trans_actuals, trans_predicts, threshold = optimal) # prop of predicted ones /prop total ones
+YDI_Index<-youdensIndex(trans_actuals, trans_predicts, threshold = optimal) # 0.48 accounts for both false-positive and false-negative rates
 
 # Calculate predictive power using concordance
 
-Concord<-Concordance(actuals, predicts)
+Concord<-Concordance(trans_actuals, trans_predicts)
 Predict_Power<-Concord$Concordance
 
-p1<-ks_plot(actuals, predicts) #cum perc of ones captured by the model against that expected random
+p1<-ks_plot(trans_actuals, trans_predicts) #cum perc of ones captured by the model against that expected random
 
-Kol_Smirnov<-ks_stat(actuals, predicts) #Kolmogorov-Smirnov statistic - maximum difference between the cumulative true positive and cumulative false positive rate
+Kol_Smirnov<-ks_stat(trans_actuals, trans_predicts) #Kolmogorov-Smirnov statistic - maximum difference between the cumulative true positive and cumulative false positive rate
 
 # Create a metrics table
 
@@ -920,16 +919,25 @@ trans_metrics<-cbind(Predict_Power, Miss_Class_Error, AUC, Sensitivity, Specific
 
 # Construct ROC curve: note actuals, predicts, predicted as vectors)
 
-pred <- ROCR::prediction(predicted, actuals)
-perf <- ROCR::performance(pred, "tpr", "fpr")
+pred_trans <- ROCR::prediction(trans_predicted, trans_actuals)
+perf_trans <- ROCR::performance(pred_trans, "tpr", "fpr")
 
-p2<-plot(perf, colorize = TRUE, main = "ROC curve for logistic regression on insurance data")
+plot(perf_trans, colorize = TRUE, main = "ROC curve for logistic regression on insurance data")
 
 #AUC curve
 
-p3<-plotROC(actual, predicted)
+plotROC(trans_actuals, trans_predicted)
 ```
+**3.4.2 Transformed Model: Goodness of Fit **
+
+```{r}
+marginals_trans<-mmps(trans,main=NULL)
+```
+
+
 ##4. Model Selection##
+
+Note - trans - marginals similar to reduced, collinearity similar, linearity similar
 
 ```{r}
 
@@ -1006,7 +1014,7 @@ YDI_Index<-youdensIndex(actuals_test, predicts_test, threshold = test_optimal) #
 Concord<-Concordance(actuals_test, predicts_test)
 Predict_Power<-Concord$Concordance
 
-p1<-ks_plot(actuals_test, predicts_test) #cum perc of ones captured by the model against that expected random
+ks_plot(actuals_test, predicts_test) #cum perc of ones captured by the model against that expected random
 
 Kol_Smirnov<-ks_stat(actuals_test, predicts_test) #Kolmogorov-Smirnov statistic - maximum difference between the cumulative true positive and cumulative false positive rate
 
@@ -1025,16 +1033,14 @@ Kol_Smirnov<-ks_stat(actuals_test, predicts_test) #Kolmogorov-Smirnov statistic 
 pred <- ROCR::prediction(predicted_test, actuals_test)
 perf <- ROCR::performance(pred, "tpr", "fpr")
 
-p2<-plot(perf, colorize = TRUE, main = "ROC curve for logistic regression on insurance data")
+plot(perf, colorize = TRUE, main = "ROC curve for logistic regression on insurance data")
 
 #Construct AUC curve
 
-p3<-plotROC(actuals_test, predicted_test)
+plotROC(actuals_test, predicted_test)
 
-# Print plots
-
-(p1|p2|P3)
 ```
+
 ##6. Summary##
 
 To be completed
